[package]
name = "http-sign"
version = "0.2.2"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"
license = "CC0-1.0"
description = "Implementation of the HTTP signature draft standard"
homepage = "https://crates.io/crates/http-sign"
documentation = "https://docs.rs/http-sign"
repository = "https://github.com/EkardNT/http-sign"
keywords = ["http", "signature", "auth", "authentication"]
categories = ["authentication", "network-programming", "web-programming::http-client"]

[dependencies]
base64 = "0.13"
bytes = "1.0"
ring = "0.16"

# Optional dependencies for type support.
http = { version = "0.2", optional = true }
